--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,11 +27,12 @@ a:hover{color:#ffbd59; }
 } */
 /* End of styling Shared */
 
-/*  */
+/* Styling the home page */
 #barChart{
-  width: 20%;
+  width: 25%;
 }
-/*  */
+
+/* End of styling Home */
 /* Styling the Dashboard page */
 .class1{
   background: #e57373;
