--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -12,8 +12,8 @@
     </div>
     <div class="card text-white bg-class1 mb-3" style="max-width: 100%;" *ngFor="let atividade of class1">
       <div class="card-header">
-        <!-- <div class="w3-left"><i class="fa fa-exclamation-triangle"></i></div> -->
-        {{atividade.titulo}}</div>
+        {{atividade.titulo}}
+      </div>
         <div class="card-body">
           <p class="card-text">{{atividade.descricao}}</p>
         </div>
@@ -24,12 +24,12 @@
       <div class="w3-container class2">
         <div class="w3-left"><i class="fa fa-send w3-xxxlarge"></i></div>
         <div class="w3-clear"></div>
-        <h4>Delegate</h4>
+        <h4>Plan/Delegate</h4>
       </div>
       <div class="card text-white bg-class2 mb-3" style="max-width: 100%;" *ngFor="let atividade of class2">
         <div class="card-header">
-          <!-- <div class="w3-left"><i class="fa fa-send"></i></div> -->
-          {{atividade.titulo}}</div>
+          {{atividade.titulo}}
+        </div>
           <div class="card-body">
             <p class="card-text">{{atividade.descricao}}</p>
           </div>
