bug register, email added

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,13 @@
         <div *ngIf="f.username.errors">Usuário tem erro</div>
       </div>
     </div>
-
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="text" formControlName="email" placeholder="email" name="email" class="form-control" id="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+      <div *ngIf="submitted" class="invalid-feedback">
+        <div *ngIf="f.email.errors">Email tem erro</div>
+      </div>
+    </div>
     <div class="form-group">
       <label for="password">Senha:</label>
       <input type="password" formControlName="password" placeholder="password" name="password" class="form-control" id="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
