--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -46,8 +46,8 @@
       </div>
       <div class="form-group">
         <input type="submit" class="register pull-right" value="Salvar">
-        <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="remove(atividade.id)" label="remover"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
-        <a routerLink="/painel" class="pull-right icon-edit" *ngIf="atividade.id" (click)="complete(atividade.id)" label="completar"><i class="fa fa-check fa-2x" aria-hidden="true"></i></a>
+        <a routerLink="/painel" title="Deletar Atividade" class="pull-right icon-edit" *ngIf="atividade.id" (click)="remove(atividade.id)" label="remover"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a>
+        <a routerLink="/painel" title="Completar Atividade" class="pull-right icon-edit" *ngIf="atividade.id" (click)="complete(atividade.id)" label="completar"><i class="fa fa-check fa-2x" aria-hidden="true"></i></a>
 
       </div>
     </mat-card>
