--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,32 +23,32 @@
 
     <mat-nav-list>
       <mat-list-item routerLink="/home"  routerLinkActive="active">
-        <i class="fa fa-home icon" aria-hidden="true"></i>
-        <div fxFlex="10"></div>
+        <i class="fa fa-home fa-2x icon" aria-hidden="true"></i>
+        <div fxFlex="15"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
           <h5>Home</h5>
         </div>
       </mat-list-item>
 
       <mat-list-item routerLink="/painel" routerLinkActive="active" >
-        <i class="fa fa-dashboard icon" aria-hidden="true"></i>
-        <div fxFlex="10"></div>
+        <i class="fa fa-dashboard fa-2x icon" aria-hidden="true"></i>
+        <div fxFlex="15"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
           <h5>Painel</h5>
         </div>
       </mat-list-item>
 
       <mat-list-item routerLink="/profile" routerLinkActive="active" >
-        <i class="fa fa-user icon" aria-hidden="true"></i>
-        <div fxFlex="10"></div>
+        <i class="fa fa-user fa-2x icon" aria-hidden="true"></i>
+        <div fxFlex="15"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
           <h5>User</h5>
         </div>
       </mat-list-item>
 
       <mat-list-item routerLink="/help" routerLinkActive="active" >
-        <i class="fa fa-question icon" aria-hidden="true"></i>
-        <div fxFlex="10"></div>
+        <i class="fa fa-question fa-2x icon" aria-hidden="true"></i>
+        <div fxFlex="15"></div>
         <div *ngIf="sidenavWidth > 6" class="sidenav-item">
           <h5>Ajuda</h5>
         </div>
