--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,8 +8,14 @@ h3 {font-family: "Raleway", sans-serif; line-height: 2.5;}
 a{color:#290074;text-decoration: none;}
 a:hover{color:#ffbd59; }
 
+.body{
+  background-color: #f5f5f5;
+}
+
 .jumbotron{
   padding:0rem 0rem 0rem 0rem;
+  background-color: #fafafa;
+
 }
 .fa-star{
   color: #f9a825;
@@ -47,7 +53,17 @@ a:hover{color:#ffbd59; }
 
 /* Styling the home page */
 #barChart{
-  width: 22%;
+  width: 25%;
+}
+
+.divHome{
+  width:100%;
+  height:91%;
+  position: absolute;
+  top:9%;
+  left:0;
+  transition:all .3s ease;
+  overflow: hidden;
 }
 
 /* End of styling Home */
@@ -89,10 +105,6 @@ a:hover{color:#ffbd59; }
   font-size: 150%;
 }
 
-.w3-container{
-  padding-top:22px;
-}
-
 .fa-search{
   align-content: flex-end;
 }
@@ -100,12 +112,26 @@ a:hover{color:#ffbd59; }
 .toolbar-spacer {
   flex: 1 1 auto;
 }
+
+.w3-container{
+  padding-top:10%;
+}
+.divPainel{
+  width:100%;
+  height:91%;
+  position: absolute;
+  top:9%;
+  left:0;
+  transition:all .3s ease;
+  overflow: hidden;
+}
+
 .panel{
   background-color: light-grey;
   border:1px solid #ccc;
   min-height: 20px;
   margin: .05%;
-  width: 416px ;
+  width: 33% ;
 }
 /* End of styling Dashboard page */
 
@@ -133,7 +159,6 @@ div#formProfile{
   position: absolute;
   width:100%;
   height:auto;
-  background-color: #fff;
   margin:auto;
   padding:2%;
   top:96%;
@@ -150,11 +175,11 @@ div.form-group-profile-header{
   margin-left: -18%;
   margin-top:-8%;
 }
-div.form-group-profile-header .form-style:focus{outline: none; border:1px solid #58bff6; color:#58bff6; }
+/*div.form-group-profile-header .form-style:focus{outline: none; border:1px solid #58bff6; color:#58bff6; }*/
 input.form-control-profile{
   color:#8a8a8a;
   display: block;
-  width: auto;
+  width: 40%;
   margin-left: 27%;
   height: auto;
   padding: 0% 1%;
@@ -296,27 +321,53 @@ div#divLogin{
 
     /* Styling the Add page */
     div#divAdd{
-      background: rgba(221,221,221,0.8);
-      /* -webkit-background-size: cover;
+      background: rgba(221,221,221,0.4);
+      overflow: hidden;
+
+      /*
+      background: url('../assets/bg.png') no-repeat center center fixed;
+      background-color: rgba(41,0,116,0.5);
+      -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
-      background-size: cover; */
+      background-size: cover;
+      font-family:'Raleway', sans-serif;
+
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
       height: auto;
       font-family:'Raleway','Arial', sans-serif;
+      background-color: #f3e5f5;*/
     }
+
+    #divAdd{
+      /*background: #5c007a;*/
+      width:100%;
+      height:91%;
+      position: absolute;
+      top:9%;
+      left:0;
+      transition:all .3s ease;
+      overflow: hidden;
+    }
+
+
     div#formAdd{
       position: absolute;
       width:40%;
+      background-color: #fff;
       /* height:50%; */
       height:auto;
-      background-color: #fff;
       margin:auto;
       border-radius: 3%;
-      padding-top: 1%;
+      padding-top: 2%;
       left:32%;
-      top:40%;
+      top:39%;
       margin-bottom:10px;
       margin-top:-15%;
+
     }
     .score-label{
       font-family:'Raleway','Arial', sans-serif;
@@ -324,7 +375,7 @@ div#divLogin{
     }
     .slider-label{
       font-family:'Raleway','Arial', sans-serif;
-      padding-left: 27%;
+      padding-left: 7%;
     }
 
     .slider {
@@ -397,33 +448,42 @@ div#divLogin{
       letter-spacing: .8px;
     }
 
-    div.form-group-add-title .form-style:focus{outline: inherit; border:1px solid #58bff6; color:#58bff6; }
-    div.form-group-add-desc .form-style:focus{outline: inherit; border:1px solid #58bff6; color:#58bff6; }
+    /*div.form-group-add-title .form-style:focus{outline: inherit;; border:1px solid; color:#58bff6; }
+    div.form-group-add-desc .form-style:focus{outline: inherit; border:1px solid; color:#58bff6; }*/
     /* End of styling Add page  */
 
     /* Styling the Sidenav page */
     .example-sidenav-content {
       display: inline;
-      height: 100vh;
+      height: 100px;
       align-items: baseline;
       justify-content: flex-end;
     }
 
     .example-sidenav {
-      background-color: #290074;
+      background-color: #6a0080;
+      height: 100%;
+
     }
     .active{
-      background-color:rgba(221,221,221,0.5);
+      /*background-color:rgba(221,221,221,0.5);*/
+      background-color: #9c27b0;
     }
 
     .sidenav-item{
       color: white;
-      font-size:20px;
+      font-size:40px;
       align-items: baseline;
     }
 
     .icon{
       color: white;
+      margin-bottom: 7%;
+    }
+
+    .mat-list-item{
+      height: 120px!important;
+      overflow: hidden;
     }
     /* End of styling Sidenav page */
 
