--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,66 +1,67 @@
-
-<mat-card *ngIf="currentUser" class="formHome">
-  <div  class="row" style="padding-left:2%">
-    <img src="./assets/user.png" style="border-radius:60%;width:5%;height:5%;" >
-    </div>
-    <div style="margin-top: -5%; margin-left: 6.3%; margin-bottom: 3%">
-     {{user.primeiroNome}} {{user.sobrenome}} (@{{currentUser}})
-  </div>
-
-  <div style="margin-top: -3%; margin-left: 6%; margin-bottom: 3%">
-    <i class="fa fa-star title" title="Acumule pontos completando atividades!" aria-hidden="true"></i> Pontuação Acumulada: {{user.scoreAcumulado}}
-  </div>
-  <div  class="row" style="padding-left:2%">
-    <div class="panel">
-    <div class="w3-container class1">
-        <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class1}}</h3>
-        </div>
-        <div class="w3-clear"></div>
-        <h4>Precisa ser feito</h4>
+<div class="divHome">
+  <mat-card *ngIf="currentUser" class="formHome">
+    <div  class="row" style="padding-left:2%">
+      <img src="./assets/user.png" style="border-radius:60%;width:5%;height:5%;" >
       </div>
+      <div style="margin-top: -5%; margin-left: 6.3%; margin-bottom: 3%">
+       {{user.primeiroNome}} {{user.sobrenome}} (@{{currentUser}})
     </div>
-    <div class="panel">
-      <div class="w3-container class2">
-        <div class="w3-left"><i class="fa fa-send w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class2}}</h3>
+
+    <div style="margin-top: -3%; margin-left: 6%; margin-bottom: 3%">
+      <i class="fa fa-star title" title="Acumule pontos completando atividades!" aria-hidden="true"></i> Pontuação Acumulada: {{user.scoreAcumulado}}
+    </div>
+    <div  class="row" style="padding-left:2%">
+      <div class="panel">
+      <div class="w3-container class1">
+          <div class="w3-left"><i class="fa fa-exclamation-triangle w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class1}}</h3>
+          </div>
+          <div class="w3-clear"></div>
+          <h4>Precisa ser feito</h4>
         </div>
-        <div class="w3-clear"></div>
-        <h4>Planeje/Delegue</h4>
       </div>
-    </div>
-    <div class="panel">
-      <div class="w3-container class3">
-        <div class="w3-left"><i class="fa fa-clock-o  w3-xxxlarge"></i></div>
-        <div class="w3-right">
-          <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class3}}</h3>
+      <div class="panel">
+        <div class="w3-container class2">
+          <div class="w3-left"><i class="fa fa-send w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class2}}</h3>
+          </div>
+          <div class="w3-clear"></div>
+          <h4>Planeje/Delegue</h4>
         </div>
-        <div class="w3-clear"></div>
-        <h4>Quando possível</h4>
       </div>
+      <div class="panel">
+        <div class="w3-container class3">
+          <div class="w3-left"><i class="fa fa-clock-o  w3-xxxlarge"></i></div>
+          <div class="w3-right">
+            <h3 class="title" title="Quantidade de tarefas abertas nesta categoria">{{count_class3}}</h3>
+          </div>
+          <div class="w3-clear"></div>
+          <h4>Quando possível</h4>
+        </div>
+      </div>
+
     </div>
 
-  </div>
-
-  <div *ngIf="barChart"  style="position: relative; height:auto; width:37%; margin-top: 1%; margin-left:2%;">
-    <h3> Percentual por Classificação </h3>
-    <canvas id="barChart">{{ barChart }}</canvas>
-  </div>
-  <div class="pull-right" style="position: relative; height:auto; width:40%; margin-top:-23%;">
-    <h3> Últimas atualizações </h3>
-  <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let atividade of currently">
-      {{atividade.status}}: {{atividade.titulo}}
-      <span class="badge badge-primary badge-pill">{{atividade.classificacao}}</span>
-    </li>
-  </ul>
-  </div>
-</mat-card>
+    <div *ngIf="barChart"  style="position: relative; height:auto; width:37%; margin-top: 1%; margin-left:2%;">
+      <h3> Percentual por Classificação </h3>
+      <canvas id="barChart">{{ barChart }}</canvas>
+    </div>
+    <div class="pull-right" style="position: relative; height:auto; width:40%; margin-top:-24%;">
+      <h3> Últimas atualizações </h3>
+    <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let atividade of currently">
+        {{atividade.status}}: {{atividade.titulo}}
+        <span class="badge badge-primary badge-pill">{{atividade.classificacao}}</span>
+      </li>
+    </ul>
+    </div>
+  </mat-card>
 
 
 
-<mat-card *ngIf="!currentUser">
-  <button mat-raised-button [routerLink]="['/info']">Login</button>
-</mat-card>
+  <mat-card *ngIf="!currentUser">
+    <button mat-raised-button [routerLink]="['/info']">Login</button>
+  </mat-card>
+</div>
