meta html and css done

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -172,8 +172,8 @@ div#formProfile{
   top:40%;
 }
 div.form-group-profile-header{
-  margin-left: -18%;
-  margin-top:-8%;
+  margin-left: -35%;
+  margin-top:-22%;
 }
 /*div.form-group-profile-header .form-style:focus{outline: none; border:1px solid #58bff6; color:#58bff6; }*/
 input.form-control-profile{
@@ -201,6 +201,25 @@ input.form-control-profile{
   font-family:'Raleway','Arial', sans-serif;
   padding-left: 27%;
   margin-top: 1%;
+}
+
+.row-profile{
+  color: blueviolet;
+  margin-left: 24%;
+}
+.overview h3 {
+    font-weight: 260;
+    margin-top: 15px;
+    margin: 10px 0 0 0;
+}
+
+.overview h4 {
+    font-weight: bold!important;
+    font-size: 27px;
+    margin-top: 0;
+}
+.user-pad {
+    padding: 20px 25px;
 }
 
 /* End of styling Profile page */
