--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="divHome">
   <mat-card *ngIf="currentUser" class="formHome">
     <div  class="row" style="padding-left:2%">
-      <img src="./assets/user.png" style="border-radius:60%;width:5%;height:5%;" >
+      <img src="./assets/photo.JPG" style="border-radius:60%;width:5%;height:5%;" >
       </div>
       <div style="margin-top: -5%; margin-left: 6.3%; margin-bottom: 3%">
        {{user.primeiroNome}} {{user.sobrenome}} (@{{currentUser}})
